Stop window shade bar extending beyond container
The default width of 946px was too big for some layouts, and didn't work
at all in 60-40 layout.

Now the default width is 100%, which keeps it within content, even in
60-40 column.

If we are in 60-40, we also want the button to shrink slightly.

[#166248940]

--- a/src/components/window-shade-button.sass
+++ b/src/components/window-shade-button.sass
@@ -1,9 +1,10 @@
 @import "themes.sass"
-  
+
 .windowShadeButton
   top: -28px
   left: 25px
-  max-width: $windowShadeButtonWidth
+  width: $windowShadeButtonWidth
+  max-width: 92%
   height: 50px
   position: relative
   display: flex
@@ -20,7 +21,7 @@
     transform: translateX(-10px)
     transition: transform 0.25s
     transition-timing-function: ease-in-out
-  
+
 .theoryAndBackground
   color: $yellowButtonTextColor
   background-color: $yellowButtonBackgroundColor
