--- a/src/components/window-shade.sass
+++ b/src/components/window-shade.sass
@@ -1,12 +1,11 @@
 @import "themes.sass"
 
 .windowShade
-  width: 946px
+  width: 100%
   max-width: 946px
-  min-width: 946px
   border-radius: $borderRadius
   border: $border-style $border-width
-  
+
 .theoryAndBackground
   border-color: $yellowBorderColor
   background-color: $yellowContentBackgroundColor
